2006-03-08  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-con-device.c:
	* src/gnome-cmd-data.c:
	* src/gnome-cmd-options-dialog.c:
        Fixes to the VFS auto volume mounting.

2006-03-08  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-selector.c: 
        Fixed wrong i18n, reported by Špela Počkar

2006-03-08 Špela Počkar <spela.pockar@gmail.com>

	* configure.in: Added Slovenian (sl) to ALL_LINGUAS.

2006-03-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer/viewer-window.c:
        Minor int viewer navigation cleanup.

	* configue.in:
	* src/libgviewer/fileops.c:
        Used HAVE_MMAP from autoconf check

2006-03-05  Assaf Gordon  <agordon88@gmail.com>

	* src/libgviewer:
        Reworked internal viewer plus new features:
        external tools and EXIF/IPTC tags viewer

2006-03-04  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-options-dialog.c:
        Fix typo.

	* doc/internal_viewer_hacking.txt:
        Added new file

	* tests/gviewer/*:
        Added tests for libgviewer

2006-02-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-options-dialog.c:
	* src/gnome-cmd-data.c:
	* src/gnome-cmd-file-list.c:
        Prettifying code ;o)

2006-02-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/imageloader.{c,h}:
        Added desktop pixmap.

	* pixmaps/:
	* pixmaps/device-icons:
        New and updated icons.

	* */*.{c,h}:
        Code cleanup.

	* gnome-cmd-file-list.h:
	* gnome-cmd-file-list.c:
	* gnome-cmd-data.c:
	* gnome-cmd-main-win.c:
	* gnome-cmd-data.h :
	* gnome-cmd-file-selector.h:
        One step closer towards 'Custom Columns'. Changed col sorting direction when selecting
        (now sets to default col sort direction)


2006-02-26  Assaf Gordon  <agordon88@gmail.com>

	* src/gnome-cmd-con-device.c:
	* src/gnome-cmd-con-device.h:
	* src/gnome-cmd-data.c:
        Added monitoring of mounted volumes.

2006-02-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.c:
	* src/gnome-cmd-options-dialog.c: